remove grid_worker.js, tweak css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 
         #wallpaperGrid {
             image-rendering: pixelated;
-            border-radius: inherit;
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
             background: white;
             width: min(90vw, 1024px);
+            margin-bottom: -10px;
         }
 
         #wallpaperGridContainer {
